# A4-OCR-Intro

task1/: .gitignore  pred.json  pyproject.toml  solution.ipynb
task1/HU-PageScan/: inference.py  train.py
task2/: Baseline.ipynb  ChineseCR.ipynb
task3/: solution.ipynb
task3/utils/: metrics.py
